# toolforge-components-api

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .vale.ini  README.md  deploy.sh  pyproject.toml  tox.ini
.pipeline/: blubber.yaml
.styles/Wikimedia/: AltText.yml  Ampersands.yml  Annotations.yml  CurlyPunctuation.yml  Dates.yml  Ellipses.yml  FreeOfFrustration.yml  Gender.yml  HeadingArticles.yml  HeadingPunctuation.yml  InclusiveLanguage.yml  Jargon.yml  Latin.yml  MovementCase.yml  OptionalPlurals.yml  Passive.yml  Repetition.yml  SentenceLength.yml  SerialComma.yml  Spacing.yml  Structure.yml  Terms.yml
components/: api.py  client.py  deploy_task.py  exceptions.py  main.py  metrics.py  settings.py  storage.py
components/api/: auth.py  base.py  base_router.py  exceptions.py  tool.py  tool_handlers.py  tool_router.py  utils.py
components/models/: api_models.py  pydantic.py
components/runtime/: base.py  toolforge.py  utils.py
components/storage/: __init__.py  base.py  exceptions.py  kubernetes.py  mock.py  utils.py
deployment/: helmfile.yaml
deployment/chart/: Chart.yaml  values.yaml
deployment/chart/crds/: deploytoken.yaml  toolconfig.yaml  tooldeployment.yaml
deployment/chart/templates/: certificate.yaml.tpl  deployment.yaml.tpl  nginx-config.yaml  role.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml
openapi/: export-openapi.py  openapi.yaml  tool-config-schema.json
tests/: conftest.py  helpers.py  test_api.py  test_deploy_task.py  test_git.py  test_router.py  testlibs.py
tests/storage/: test_kubernetes.py
utils/: generate_config_schema.py  start_lima_kilo_tunnel.sh
