[tool.poetry]
name = "components"
version = "0.2.0"
description = "Toolforge Components API"
authors = ["Your Name <you@example.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
pydantic-settings = "^2.3.4"
toml = "^0.10.2"
kubernetes = "^31.0.0"
pyyaml = "^6.0.2"
toolforge-weld = "^1.6.4"
pytest-cov = "^6.0.0"
prometheus-client = "^0.21.0"
prometheus-fastapi-instrumentator = "^7.0.0"
mypy-extensions = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pre-commit = "^3.7.1"
datamodel-code-generator = {version = ">=0.34", extras = ["http"]}
pytest-asyncio = "^0.25.3"
freezegun = "^1.5.1"
types-requests = "^2.32.4.20250611"
types-toml = "^0.10.8.20240310"
jsonref = "^1.1.0"
types-pyyaml = "^6.0.12.20250516"

[tool.ruff.lint]
# add isort
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = "components.gen.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
